# AIChainBuilder

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml  run-tests-codecov.yml
chain_builder/: ChainBuilder.py
chain_composer/_core_internal/: __init__.py  _chain_builder.py  _chain_manager.py  _chain_wrapper.py
chain_composer/_error_handling/: __init__.py
chain_composer/_error_handling/classes/: _base_chain_error.py
chain_composer/_error_handling/enums/: _error_reference.py
chain_composer/_error_handling/messages/: __init__.py
chain_composer/_error_handling/registry/: _error_registry.py
chain_composer/_error_handling/utils/: _error_message_map.py
chain_composer/_error_handling/validators/: _chain_composer_validator.py
chain_composer/_logging/: __init__.py  log_helpers.py
chain_composer/_type_aliases/: type_aliases.py
chain_composer/core/: __init__.py  chain_composer.py
chain_composer/utils/: api_key_validator.py
examples/complex_example/: abstract.py  complex_example.py  models.py  prompts.py
practical_tests/: simple_2_layer_chain.py
tests/: conftest.py  test_chain_composer.py
