[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "ChainBuilder"
version = "0.0.1"
description = "Default template for PDM package"
authors = [
    { name = "Spencer Presley", email = "spencerpresley96@gmail.com" },
    {name = "Spencer Presley", email = "153392395+SpencerPresley@users.noreply.github.com"},
]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "langchain==0.3.7",
    "langchain_anthropic==0.3.0",
    "langchain_core==0.3.19",
    "langchain_google_genai==2.0.5",
    "langchain_openai==0.2.9",
    "openai==1.58.1",
    "pydantic==2.9.2",
    "platformdirs==4.3.6",
]
license = {text = "MIT"}

[project.optional-dependencies]
docs = [
    "sphinx",
    "piccolo-theme",
    "sphinx-autodoc-typehints",
    "pydata-sphinx-theme",
]
test = [
    "pytest>=7.4.3",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.21.1",
    "python-dotenv>=1.0.0",
]
dev = [
    "black>=23.11.0",
    "mypy>=1.7.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
]

[project.urls]
"Homepage" = "https://github.com/SpencerPresley/AIChainComposer"
"Bug Tracker" = "https://github.com/SpencerPresley/AIChainComposer/issues"

[tool.pdm]
distribution = true
[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.21.1",
    "python-dotenv>=1.0.0",
]
dev = [
    "black>=23.11.0",
    "mypy>=1.7.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
]
docs = [
    "sphinx",
    "piccolo-theme",
    "sphinx-autodoc-typehints",
    "pydata-sphinx-theme",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --cov=chain_composer"
markers = [
    "unit: mark test as a unit test",
    "integration: mark test as an integration test",
]

[tool.coverage.run]
source = ["chain_composer"]
omit = [
    "chain_composer/_error_handling/messages/*",
    "chain_composer/_type_aliases/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "pass",
    "\\.\\.\\.",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.setuptools.packages.find]
where = ["."]
include = ["chain_composer*"]
namespaces = false